// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formulas const float 1`] = `
Object {
  "$primitive": 0.4425,
}
`;

exports[`formulas const string literal 1`] = `
Object {
  "$primitive": "abc",
}
`;

exports[`formulas const string literal single quote 1`] = `
Object {
  "$primitive": "abc",
}
`;

exports[`formulas constant null 1`] = `
Object {
  "$primitive": null,
}
`;

exports[`formulas constant true 1`] = `
Object {
  "$primitive": true,
}
`;

exports[`formulas constant zero 1`] = `
Object {
  "$primitive": 0,
}
`;

exports[`formulas functions multiple args 1`] = `
Object {
  "args": Array [
    Object {
      "$ref": "abc",
    },
    Object {
      "$primitive": 123,
    },
  ],
  "op": "max",
}
`;

exports[`formulas functions no args 1`] = `
Object {
  "args": Array [],
  "op": "now",
}
`;

exports[`formulas functions single arg 1`] = `
Object {
  "args": Array [
    Object {
      "$primitive": 123,
    },
  ],
  "op": "sin",
}
`;

exports[`formulas get . 1`] = `
Object {
  "args": Array [
    Object {
      "$ref": "a",
    },
    Object {
      "$primitive": "b",
    },
  ],
  "op": "get",
}
`;

exports[`formulas get [nubmer] 1`] = `
Object {
  "args": Array [
    Object {
      "$ref": "a",
    },
    Object {
      "$primitive": 0,
    },
  ],
  "op": "get",
}
`;

exports[`formulas get [singleQuote] 1`] = `
Object {
  "args": Array [
    Object {
      "$ref": "a",
    },
    Object {
      "$primitive": "str",
    },
  ],
  "op": "get",
}
`;

exports[`formulas get [str] 1`] = `
Object {
  "args": Array [
    Object {
      "$ref": "a",
    },
    Object {
      "$primitive": "str",
    },
  ],
  "op": "get",
}
`;

exports[`formulas get [value] 1`] = `
Object {
  "args": Array [
    Object {
      "$ref": "a",
    },
    Object {
      "$ref": "b",
    },
  ],
  "op": "get",
}
`;

exports[`formulas multi plus 1`] = `
Object {
  "args": Array [
    Object {
      "args": Array [
        Object {
          "$ref": "a",
        },
        Object {
          "$primitive": 1,
        },
      ],
      "op": "add",
    },
    Object {
      "$ref": "b",
    },
  ],
  "op": "add",
}
`;

exports[`formulas single minus 1`] = `
Object {
  "args": Array [
    Object {
      "$ref": "a",
    },
    Object {
      "$primitive": 1,
    },
  ],
  "op": "sub",
}
`;

exports[`formulas single mult 1`] = `
Object {
  "args": Array [
    Object {
      "$ref": "a",
    },
    Object {
      "$primitive": 1,
    },
  ],
  "op": "mult",
}
`;

exports[`formulas single plus 1`] = `
Object {
  "args": Array [
    Object {
      "$ref": "a",
    },
    Object {
      "$primitive": 1,
    },
  ],
  "op": "add",
}
`;

exports[`formulas string template only parameteres 1`] = `
Object {
  "args": Array [
    Object {
      "args": Array [
        Object {
          "$ref": "param",
        },
      ],
      "op": "array",
    },
    Object {
      "$primitive": "",
    },
  ],
  "op": "join",
}
`;

exports[`formulas string template several parameteres 1`] = `
Object {
  "args": Array [
    Object {
      "args": Array [
        Object {
          "$primitive": "normal string and ",
        },
        Object {
          "args": Array [
            Object {
              "$ref": "arg",
            },
            Object {
              "$primitive": 1,
            },
          ],
          "op": "add",
        },
        Object {
          "$primitive": " argument and another ",
        },
        Object {
          "args": Array [
            Object {
              "$primitive": 30,
            },
            Object {
              "$primitive": 4,
            },
          ],
          "op": "mult",
        },
        Object {
          "$primitive": " argument",
        },
      ],
      "op": "array",
    },
    Object {
      "$primitive": "",
    },
  ],
  "op": "join",
}
`;

exports[`formulas string template with parameteres 1`] = `
Object {
  "args": Array [
    Object {
      "args": Array [
        Object {
          "$primitive": "some-id-",
        },
        Object {
          "args": Array [],
          "op": "key",
        },
      ],
      "op": "array",
    },
    Object {
      "$primitive": "",
    },
  ],
  "op": "join",
}
`;

exports[`formulas string template with stuff 1`] = `
Object {
  "args": Array [
    Object {
      "$ref": "condition",
    },
    Object {
      "args": Array [
        Object {
          "args": Array [
            Object {
              "$primitive": "def",
            },
          ],
          "op": "array",
        },
        Object {
          "$primitive": "",
        },
      ],
      "op": "join",
    },
  ],
  "op": "add",
}
`;

exports[`formulas string template without parameteres 1`] = `
Object {
  "args": Array [
    Object {
      "args": Array [
        Object {
          "$primitive": "normal string",
        },
      ],
      "op": "array",
    },
    Object {
      "$primitive": "",
    },
  ],
  "op": "join",
}
`;

exports[`formulas unary negate 1`] = `
Object {
  "args": Array [
    Object {
      "$ref": "a",
    },
  ],
  "op": "negate",
}
`;

exports[`formulas unary not 1`] = `
Object {
  "args": Array [
    Object {
      "$ref": "abc",
    },
  ],
  "op": "not",
}
`;

exports[`formulas unary notnot 1`] = `
Object {
  "args": Array [
    Object {
      "args": Array [
        Object {
          "$ref": "abc",
        },
      ],
      "op": "not",
    },
  ],
  "op": "not",
}
`;
